deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-hw1-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: otus-hw1-app
  template:
    metadata:
      labels:
        app: otus-hw1-app
    spec:
      containers:
        - name: otus-hw1cle
          image: ribragimovalfa/otus-hw1.1:latest
          ports:
            - name: web
              containerPort: 80
          livenessProbe:
            httpGet:
              port: 80
              path: /health
            initialDelaySeconds: 5
            periodSeconds: 2
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              port: 80
              path: /health
            initialDelaySeconds: 2
            periodSeconds: 2
