service.yml
apiVersion: v1
kind: Service
metadata:
  name: otus-hw1-service
spec:
  selector:
    app: otus-hw1-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 5000
  type: ClusterIP
