ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-hw1-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/ribragimovalfa/?(.*)($|/)
            pathType: Prefix
            backend:
              service:
                name: otus-hw1-service
                port:
                  number: 8000
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: otus-hw1-service
                port:
                  number: 8000
